--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 </head>
 <body>
     <div id="app">
-        
+        <ul>
+            <li v-for=”item in todoList”>
+                {{item.name}}
+            </li>
+        </ul>
     </div>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script src="./js/script.js"></script>
