--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <div id="app">
         <ul>
-            <li v-for=”item in todoList”>
+            <li v-for=”item in todoList” :class="(item.done === true)? 'done': ''">
                 {{item.name}}
             </li>
         </ul>
