Creo un metodo invertDone (come fosse un interruttore); siccome il risultato è un'espressione booelnae, uso il ! per dire il contrario (aggiungo index per assicurarmi di prendere tutti gli item)

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <div id="app">
         <ul>
-            <li v-for=”item in todoList” :class="(item.done === true)? 'done': ''">
+            <li v-for="(item, index) in todoList" :key="index" :class="(item.done === true)? 'done': ''" @click="invertDone(index)">
                 {{item.name}}
             </li>
         </ul>
